--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: white;
+  background-color: #1F1F1F;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,7 +15,7 @@
 :root .light-mode {
   color-scheme: light;
   color: black;
-  background-color: rgba(255, 255, 255, 0.87);
+  background-color: #EAEAEA;
 }
 
 a {
